html de seccion Servicio completado, inciando css

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
     <body>
+        <!-- 1 HEADER -->
         <header class="header" id="inicio">
             <img src="img/hamburguesa.svg" alt="" class="hamburguer">
             <nav class="menu-navegacion">
                 <a href="#inicio">Inicio</a>
-                <a href="#inicio">Servicio</a>
+                <a href="#servicio">Servicio</a>
                 <a href="#inicio">Galería</a>
                 <a href="#inicio">Expertos</a>                
             </nav>
@@ -20,5 +21,31 @@
                 <p class="slogan">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>                
             </div>
         </header>
+        <!-- .HEADER -->
+        <main>
+            <!-- 2 SERVICIO -->
+            <section class="contenedor" id="servicio">
+                <h2 class="subtitulo">Nuestro Servicio</h2>
+                <div class="contenedor-servicio">
+                    <img src="img/checklist.svg" alt="">
+                    <div class="checklist-servicio">
+                        <div class="service">
+                            <h3 class="n-service"><span class="number">1</span>Diseño Web</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quis unde odio facere ipsa laborum dolorem quae alias suscipit ipsam!</p>
+                        </div>
+                        <div class="service">
+                            <h3 class="n-service"><span class="number">2</span>Diseño Web</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quis unde odio facere ipsa laborum dolorem quae alias suscipit ipsam!</p>
+                        </div>
+                        <div class="service">
+                            <h3 class="n-service"><span class="number">3</span>Diseño Web</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quis unde odio facere ipsa laborum dolorem quae alias suscipit ipsam!</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- .SERVICIO -->
+
+        </main>
     </body>
 </html>
