html de seccion galeria y de seccion light-image añadido

--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
             </section>
             <!-- .SERVICIO -->
 
+            <section class="gallery" id="galeria">
+                <div class="contenedor">
+                    <h2 class="subtitulo">Galeria</h2>
+                    <div class="contenedor-galeria">
+                        <img src="img/uno.jpg" alt="" class="img-galeria">
+                        <img src="img/dos.jpg" alt="" class="img-galeria">
+                        <img src="img/tres.jpg" alt="" class="img-galeria">
+                        <img src="img/cuatro.jpg" alt="" class="img-galeria">
+                        <img src="img/cinco.jpg" alt="" class="img-galeria">
+                        <img src="img/seis.jpg" alt="" class="img-galeria">
+                    </div>
+                </div>
+            </section>
+
+            <section class="imagen-light">
+                <img src="img/close.svg" alt="" class="close">
+                <img src="img/woman.jpg" alt="" class="agregar-imagen">
+            </section>
+
         </main>
     </body>
 </html>
