html y css de sección galeria completa

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <nav class="menu-navegacion">
                 <a href="#inicio">Inicio</a>
                 <a href="#servicio">Servicio</a>
-                <a href="#inicio">Galería</a>
-                <a href="#inicio">Expertos</a>                
+                <a href="#galeria">Galería</a>
+                <a href="#expertos">Expertos</a>                
             </nav>
             <div class="head contenedor">
                 <h1 class="titulo">Tefy MakeUp</h1>
