--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Tefy MakeUp</title>
+        <title>Diseño Web - Gazabache</title>
         <link rel="stylesheet" href="css/estilos.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
@@ -17,7 +17,7 @@
                 <a href="#expertos">Expertos</a>                
             </nav>
             <div class="head contenedor">
-                <h1 class="titulo">Tefy MakeUp</h1>
+                <h1 class="titulo">Brave Developer Web</h1>
                 <p class="slogan">Lorem ipsum, dolor sit amet consectetur adipisicing.</p>                
             </div>
         </header>
