Se añadio la seccion de expertos tanto el html como el css

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             </section>
             <!-- .SERVICIO -->
 
+            <!-- GALERIA -->
             <section class="gallery" id="galeria">
                 <div class="contenedor">
                     <h2 class="subtitulo">Galeria</h2>
@@ -64,6 +65,31 @@
                 <img src="img/close.svg" alt="" class="close">
                 <img src="img/woman.jpg" alt="" class="agregar-imagen">
             </section>
+            <!-- .GALERIA -->
+
+            <section class="contenedor" id="expertos">
+                <h2 class="subtitulo">Expertos en:</h2>
+                <div class="contenedor-expertos">                
+                    <div class="experto">
+                        <img src="img/pie_chart.svg" alt="">
+                        <h3 class="n-expert">Analysis</h3>
+                    </div>
+                    <div class="experto">
+                        <img src="img/search_engine.svg" alt="">
+                        <h3 class="n-expert">SEO</h3>
+                    </div>
+                    <div class="experto">
+                        <img src="img/security.svg" alt="">
+                        <h3 class="n-expert">Security</h3>
+                    </div>                
+                </div>
+            </section>
+
+            <footer id="contacto">
+                
+            </footer>
+
+            
 
         </main>
     </body>
