html y css del footer añadido

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Diseño Web - Gazabache</title>
         <link rel="stylesheet" href="css/estilos.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+        <link href='https://unpkg.com/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+
     </head>
     <body>
         <!-- 1 HEADER -->
@@ -86,10 +88,19 @@
             </section>
 
             <footer id="contacto">
-                
-            </footer>
-
-            
+                <div class="contenedor contenedor-footer">
+                    <div class="contact-us">
+                        <h2 class="brand">Brave Developer</h2>
+                        <p>La mejor empresa de servicios de latinoamérica</p>
+                    </div>
+                    <div class="social">
+                        <a href="#" class="social-icon"><i class='bx bxl-facebook'></i></a>
+                        <a href="#" class="social-icon"><i class='bx bxl-twitter' ></i></a>
+                        <a href="#" class="social-icon"><i class='bx bxl-instagram' ></i></a>
+                    </div>
+                </div>
+                <div class="line"></div>
+            </footer>            
 
         </main>
     </body>
